@@ -2,10 +2,10 @@
 OpenEye-toolkits==2019.10.2
 numpy
 jsonschema >= 2.6.0
-rcsb.utils.io >= 0.57
-rcsb.db >= 0.981
-rcsb.utils.chemref >= 0.41
-rcsb.utils.chem >= 0.26
+rcsb.utils.io >= 0.63
+rcsb.db >= 0.985
+rcsb.utils.chemref >= 0.42
+rcsb.utils.chem >= 0.29
 rcsb.utils.citation >= 0.15
 rcsb.utils.config >= 0.33
 rcsb.utils.ec >= 0.21
