@@ -42,10 +42,10 @@ setup(
     install_requires=[
         "jsonschema >= 2.6.0",
         "numpy",
-        "rcsb.utils.io >= 0.57",
-        "rcsb.db >= 0.981",
-        "rcsb.utils.chemref >= 0.41",
-        "rcsb.utils.chem >= 0.26",
+        "rcsb.utils.io >= 0.63",
+        "rcsb.db >= 0.985",
+        "rcsb.utils.chemref >= 0.42",
+        "rcsb.utils.chem >= 0.29",
         "rcsb.utils.citation >= 0.15",
         "rcsb.utils.config >= 0.33",
         "rcsb.utils.seq >= 0.41",
